Fixed button bug

--- a/src/styles.css
+++ b/src/styles.css
@@ -61,7 +61,7 @@ button:active {
     background-color: #FFEEE5;
     color: #DE6834;
     border: 0px;
-    height: 95%;
+    height: 170px;
 }
 #symeq:hover {
     background-color: #ffddcc;
